--- a/style.css
+++ b/style.css
@@ -412,8 +412,8 @@ img:hover {
     text-align: center;
     text-transform: capitalize;
 }
-.how-body video{
-	margin: 300px 0 100px 0;
+.how-body iframe{
+	margin: 200px 0 200px 0;
 
 
 
